- Changed documentation and sec patterns
